7th commit: implementation of a template about a signup success and a signup error

--- a/src/main/webapp/styles/forms.css
+++ b/src/main/webapp/styles/forms.css
@@ -13,7 +13,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
-    background: white;
+    background: #131516;
     border-radius: 10px;
 }
 
@@ -21,6 +21,7 @@ body {
     text-align: center;
     padding: 0 0 20px 0;
     border-bottom: 1px solid silver;
+    color: #adadad;
 }
 
 .center form {
@@ -28,13 +29,13 @@ body {
     box-sizing: border-box;
 }
 
-form .txt_field {
+form .txt-field {
     position: relative;
     border-bottom: 2px solid #adadad;
     margin: 30px 0;
 }
 
-.txt_field input {
+.txt-field input {
     width: 100%;
     padding: 0 5px;
     height: 40px;
@@ -42,9 +43,10 @@ form .txt_field {
     border: none;
     background: none;
     outline: none;
+    color: #e9f4fb;
 }
 
-.txt_field label {
+.txt-field label {
     position: absolute;
     top: 50%;
     left: 5px;
@@ -55,25 +57,25 @@ form .txt_field {
     transition: .5s;
 }
 
-.txt_field span::before {
+.txt-field span::before {
     content: '';
     position: absolute;
     top: 40px;
     left: 0;
-    width: 0%;
+    width: 0;
     height: 2px;
     background: #2691d9;
     transition: .5s;
 }
 
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label {
+.txt-field input:focus ~ label,
+.txt-field input:valid ~ label {
     top: -5px;
     color: #2691d9;
 }
 
-.txt_field input:focus ~ span:before,
-.txt_field input:valid ~ span:before {
+.txt-field input:focus ~ span:before,
+.txt-field input:valid ~ span:before {
     width: 100%;
 }
 
@@ -91,7 +93,8 @@ input[type="submit"] {
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: #2691d9;
+    /*background: #2691d9;*/
+    background: linear-gradient(120deg, #8e44ad, #2980b9);
     border-radius: 25px;
     font-size: 18px;
     color: #e9f4fb;
@@ -101,28 +104,36 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    border-color: #2691d9;
+    /*border-color: #2691d9;*/
+    border-color: #ff0000;
     transition: -5s;
 }
 
-.signup_link {
+.signup-link {
     margin: 30px 0;
     text-align: center;
     font-size: 16px;
-    color: #666666;
+    color: #adadad;
 }
 
-.signup_link a {
+.signup-link a {
     color: #2691d9;
     text-decoration: none;
 }
 
-.signup_link a:hover {
+.signup-link a:hover {
     text-decoration: underline;
 }
 
 .user-signup-button {
     margin: -5px 0 30px;
 }
+
+/*do usunięcia po implementacji bazy danych*/
+.users-list li {
+    color: #e9f4fb;
+    list-style-type: none;
+}
+
 
 
