--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -93,18 +93,16 @@ input[type="submit"] {
     width: 100%;
     height: 50px;
     border: 1px solid;
-    /*background: #2691d9;*/
     background: linear-gradient(120deg, #8e44ad, #2980b9);
     border-radius: 25px;
     font-size: 18px;
-    color: #e9f4fb;
+    color: #ffe4c4;
     font-weight: 700;
     cursor: pointer;
     outline: none;
 }
 
 input[type="submit"]:hover {
-    /*border-color: #2691d9;*/
     border-color: #ff0000;
     transition: -5s;
 }
@@ -133,6 +131,24 @@ input[type="submit"]:hover {
 .users-list li {
     color: #e9f4fb;
     list-style-type: none;
+}
+
+.logo {
+    color: #ffa500;
+    font-size: 2em;
+    font-weight: 400;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px;
+    padding: 16px 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 
